# robocup-backend

./: .env.example  Dockerfile  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.override.yml  docker-compose.yml  noxfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: d4867f3a4c0a_first_revision.py
app/: backend_pre_start.py  celeryworker_pre_start.py  main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: competitions.py  login.py  rescue.py  teams.py  users.py  utils.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_awards.py  crud_competition.py  crud_team.py  crud_user.py
app/db/: base.py  init_db.py
app/models/: __init__.py  awards.py  competition.py  onstage.py  rescue.py  team.py  user.py
app/schemas/: __init__.py  awards.py  competition.py  onstage.py  team.py  team_member.py  user.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_users.py
app/tests/crud/: test_user.py
tests/: test_util.py
tests/utils/: user.py  utils.py
